# vstr

./: Cargo.toml  README.md
vstr/: Cargo.toml
vstr-prepacker/: Cargo.toml
vstr-prepacker/src/: main.rs
vstr-zstd/: Cargo.toml
vstr-zstd/src/: main.rs  main2.rs
vstr/src/: lib.rs  trie.rs
vstrdbg/: Cargo.toml
vstrdbg/src/: main.rs
