[package]
name = "vstr"
version = "0.1.0"
description = "Dynamic adaptive small string compression, optimised for lookup-key-like values (filesystem paths, KV-store keys, record IDs, etc.)"
edition = "2021"

[dependencies]
aho-corasick = "1.0.1"
chrono = "0.4.24"
data-encoding = "2.3.3"
itertools = "0.10.5"
num-bigint = "0.4.3"
num-derive = "0.3.3"
num-traits = "0.2.15"
once_cell = "1.17.1"
regex = "1.8.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.160", features = ["derive"] }
